2008-06-13  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.DesignerSupport.addin.xml,
	  MonoDevelop.DesignerSupport.mdp,
	  MonoDevelop.DesignerSupport/ClassOutlineTextEditorExtension.cs,
	  Makefile.am: Implement document outline for .NET source files.

2008-06-10  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.DesignerSupport.addin.xml,
	  MonoDevelop.DesignerSupport.mdp,
	  MonoDevelop.DesignerSupport/DesignerSupportService.cs,
	  MonoDevelop.DesignerSupport/CodeBehindService.cs,
	  MonoDevelop.DesignerSupport.CodeBehind/CodeBehindMissingClassBuilder.cs,
	  MonoDevelop.DesignerSupport.CodeBehind/CodeBehindDisplayBinding.cs,
	  MonoDevelop.DesignerSupport.CodeBehind/CodeBehindProjectFileExtension.cs,
	  MonoDevelop.DesignerSupport.CodeBehind/ICodeBehindProvider.cs,
	  MonoDevelop.DesignerSupport.CodeBehind/CodeBehindClassEventArgs.cs,
	  MonoDevelop.DesignerSupport.CodeBehind/CodeBehindClass.cs,
	  MonoDevelop.DesignerSupport.CodeBehind/CodeBehindViewContent.cs,
	  Makefile.am: Remove old CodeBehind grouping mechanism.

2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.DesignerSupport.addin.xml: Bump MD version.

2008-06-03  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.DesignerSupport.PropertyGrid.Editors/TextEditor.cs,
	  MonoDevelop.DesignerSupport.PropertyGrid.Editors/EnumerationEditorCell.cs,
	  MonoDevelop.DesignerSupport.PropertyGrid.Editors/FlagsEditorCell.cs,
	  MonoDevelop.DesignerSupport.Toolbox/ToolboxWidget.cs: Use the
	  OnDestroyed event instead of Dispose, since with the latest changes
	  in gtk#, Dispose is not called anymore when a widget is destroyed.

2008-05-29  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.DesignerSupport.Toolbox/CecilToolboxItemLoader.cs: Fix
	  warning.

2008-05-27  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.DesignerSupport/RemoteDesignerProcess.cs: Fix exception
	  catching from GTK thread.

2008-05-22  Lluis Sanchez Gual <lluis@novell.com> 