@@ -1,3 +1,8 @@
+2008-06-16  Michael Hutchinson <mhutchinson@novell.com> 
+
+	* MonoDevelop.DesignerSupport/ClassOutlineTextEditorExtension.cs: List
+	  members in the order they're present in the file.
+
 2008-06-13  Michael Hutchinson <mhutchinson@novell.com> 
 
 	* MonoDevelop.DesignerSupport.addin.xml,
